--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <form action="">
             <input id="nuevaT" type="text" class="todo-input" />
-            <div class="dropdown">
+            <! ––<div class="dropdown">
                 <button class="dropbtn">Iconos</button>
 
                 <div class="dropdown-content">
@@ -28,7 +28,7 @@
                     <a id="code" href="#5"><i class="fa-solid fa-code"></i></a>
                     <a id="coffe" href="#6"><i class="fa-solid fa-mug-hot"></i></a>
                 </div>
-            </div>
+            </div>––>
 
 
             <button class="todo-button" type="submit">Añadir <i class="fa-solid fa-check"></i></button>
